implementing css of the open source section

--- a/index.html
+++ b/index.html
@@ -51,6 +51,228 @@
                     </div>
                 </div>
             </div>
+
+            <div class="card">
+                <div class="card-background">
+                    <img src="assets/images/chrome.png" alt="">
+                </div>
+                <div class="card-text">
+                    <div class="card-heading">
+                        <h3>Chromium</h3>
+                    </div>
+                    <div class="p">
+                        <p>Projeto de navegador de código aberto que serve de base para o Google Chrome e outros navegadores modernos.</p>
+                    </div>
+                </div>
+                <div class="card-label">
+                    <div class="labels">
+                        <div class="label">
+                            <p>Java</p>
+                        </div>
+                        <div class="label">
+                            <p>Web</p>
+                        </div>
+                        <div class="label">
+                            <p>Java</p>
+                        </div>
+                    </div>
+                    <div>
+                        <button>Ver projeto</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-background">
+                    <img src="assets/images/chrome.png" alt="">
+                </div>
+                <div class="card-text">
+                    <div class="card-heading">
+                        <h3>Chromium</h3>
+                    </div>
+                    <div class="p">
+                        <p>Projeto de navegador de código aberto que serve de base para o Google Chrome e outros navegadores modernos.</p>
+                    </div>
+                </div>
+                <div class="card-label">
+                    <div class="labels">
+                        <div class="label">
+                            <p>Java</p>
+                        </div>
+                        <div class="label">
+                            <p>Web</p>
+                        </div>
+                        <div class="label">
+                            <p>Java</p>
+                        </div>
+                    </div>
+                    <div>
+                        <button>Ver projeto</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-background">
+                    <img src="assets/images/chrome.png" alt="">
+                </div>
+                <div class="card-text">
+                    <div class="card-heading">
+                        <h3>Chromium</h3>
+                    </div>
+                    <div class="p">
+                        <p>Projeto de navegador de código aberto que serve de base para o Google Chrome e outros navegadores modernos.</p>
+                    </div>
+                </div>
+                <div class="card-label">
+                    <div class="labels">
+                        <div class="label">
+                            <p>Java</p>
+                        </div>
+                        <div class="label">
+                            <p>Web</p>
+                        </div>
+                        <div class="label">
+                            <p>Java</p>
+                        </div>
+                    </div>
+                    <div>
+                        <button>Ver projeto</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-background">
+                    <img src="assets/images/chrome.png" alt="">
+                </div>
+                <div class="card-text">
+                    <div class="card-heading">
+                        <h3>Chromium</h3>
+                    </div>
+                    <div class="p">
+                        <p>Projeto de navegador de código aberto que serve de base para o Google Chrome e outros navegadores modernos.</p>
+                    </div>
+                </div>
+                <div class="card-label">
+                    <div class="labels">
+                        <div class="label">
+                            <p>Java</p>
+                        </div>
+                        <div class="label">
+                            <p>Web</p>
+                        </div>
+                        <div class="label">
+                            <p>Java</p>
+                        </div>
+                    </div>
+                    <div>
+                        <button>Ver projeto</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-background">
+                    <img src="assets/images/chrome.png" alt="">
+                </div>
+                <div class="card-text">
+                    <div class="card-heading">
+                        <h3>Chromium</h3>
+                    </div>
+                    <div class="p">
+                        <p>Projeto de navegador de código aberto que serve de base para o Google Chrome e outros navegadores modernos.</p>
+                    </div>
+                </div>
+                <div class="card-label">
+                    <div class="labels">
+                        <div class="label">
+                            <p>Java</p>
+                        </div>
+                        <div class="label">
+                            <p>Web</p>
+                        </div>
+                        <div class="label">
+                            <p>Java</p>
+                        </div>
+                    </div>
+                    <div>
+                        <button>Ver projeto</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-background">
+                    <img src="assets/images/chrome.png" alt="">
+                </div>
+                <div class="card-text">
+                    <div class="card-heading">
+                        <h3>Chromium</h3>
+                    </div>
+                    <div class="p">
+                        <p>Projeto de navegador de código aberto que serve de base para o Google Chrome e outros navegadores modernos.</p>
+                    </div>
+                </div>
+                <div class="card-label">
+                    <div class="labels">
+                        <div class="label">
+                            <p>Java</p>
+                        </div>
+                        <div class="label">
+                            <p>Web</p>
+                        </div>
+                        <div class="label">
+                            <p>Java</p>
+                        </div>
+                    </div>
+                    <div>
+                        <button>Ver projeto</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-background">
+                    <img src="assets/images/chrome.png" alt="">
+                </div>
+                <div class="card-text">
+                    <div class="card-heading">
+                        <h3>Chromium</h3>
+                    </div>
+                    <div class="p">
+                        <p>Projeto de navegador de código aberto que serve de base para o Google Chrome e outros navegadores modernos.</p>
+                    </div>
+                </div>
+                <div class="card-label">
+                    <div class="labels">
+                        <div class="label">
+                            <p>Java</p>
+                        </div>
+                        <div class="label">
+                            <p>Web</p>
+                        </div>
+                        <div class="label">
+                            <p>Java</p>
+                        </div>
+                    </div>
+                    <div>
+                        <button>Ver projeto</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="open-source-section">
+            <div class="open-source-text">
+                    <p>Código aberto (do inglês Open Source) é o código-fonte que é disponibilizado gratuitamente para consulta, examinação, modificação e redistribuição. Os produtos incluem permissão para usar o código-fonte, documentos de design ou conteúdo do produto.</p>
+                    <p>Fonte: <a href="https://pt.wikipedia.org/wiki/Código_aberto">https://pt.wikipedia.org/wiki/Código_aberto</a></p>
+            </div>
+
+            <div class="open-source-text">
+                    <p>Software livre é o software que concede liberdade ao usuário para executar, acessar e modificar o código fonte, e redistribuir cópias com ou sem modificações. Sua definição é estabelecida pela Free Software Foundation em conjunto com o projeto GNU.</p>
+                    <p>Fonte: <a href="https://pt.wikipedia.org/wiki/Software_livre" style="text-decoration: none;"><span>https://pt.wikipedia.org/wiki/Software_livre</span></a></p>
+            </div>
         </div>
     </main>
 </body>
