finishing off the footer

--- a/index.html
+++ b/index.html
@@ -275,5 +275,16 @@
             </div>
         </div>
     </main>
+    <footer>
+        <div class="logos">
+            <div>
+                <img class="ifro-image" src="assets/images/ifro-logo.png" alt="">
+            </div>
+
+            <div>
+                <img class="fslab-image" src="assets/images/fslab-logo.png" alt="">
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
