--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <div class="card-gallery">
             <div class="card">
-                <div class="card-background">
+                <div class="card-background" style="background-color: #B6D5FF;">
                     <img src="assets/images/chrome.png" alt="">
                 </div>
                 <div class="card-text">
@@ -53,27 +53,27 @@
             </div>
 
             <div class="card">
-                <div class="card-background">
-                    <img src="assets/images/chrome.png" alt="">
+                <div class="card-background" style="background-color: #C5F3FF;">
+                    <img src="assets/images/react.png" alt="">
                 </div>
                 <div class="card-text">
                     <div class="card-heading">
-                        <h3>Chromium</h3>
+                        <h3>React</h3>
                     </div>
                     <div class="p">
-                        <p>Projeto de navegador de código aberto que serve de base para o Google Chrome e outros navegadores modernos.</p>
+                        <p>Biblioteca JavaScript para construir interfaces de usuário reativas, criada pelo Facebook e usada em milhares de aplicações web.</p>
                     </div>
                 </div>
                 <div class="card-label">
                     <div class="labels">
                         <div class="label">
-                            <p>Java</p>
+                            <p>Typescript</p>
+                        </div>
+                        <div class="label">
+                            <p>JSX</p>
                         </div>
                         <div class="label">
                             <p>Web</p>
-                        </div>
-                        <div class="label">
-                            <p>Java</p>
                         </div>
                     </div>
                     <div>
@@ -83,27 +83,27 @@
             </div>
 
             <div class="card">
-                <div class="card-background">
-                    <img src="assets/images/chrome.png" alt="">
+                <div class="card-background" style="background-color: #F6C29D;">
+                    <img src="assets/images/ubunto.png" alt="">
                 </div>
                 <div class="card-text">
                     <div class="card-heading">
-                        <h3>Chromium</h3>
+                        <h3>Ubunto</h3>
                     </div>
                     <div class="p">
-                        <p>Projeto de navegador de código aberto que serve de base para o Google Chrome e outros navegadores modernos.</p>
+                        <p>Distribuição Linux baseada em Debian, voltada para usabilidade, segurança e atualização frequente.</p>
                     </div>
                 </div>
                 <div class="card-label">
                     <div class="labels">
                         <div class="label">
-                            <p>Java</p>
+                            <p>C</p>
                         </div>
                         <div class="label">
-                            <p>Web</p>
+                            <p>Python</p>
                         </div>
                         <div class="label">
-                            <p>Java</p>
+                            <p>Bash</p>
                         </div>
                     </div>
                     <div>
@@ -113,27 +113,27 @@
             </div>
 
             <div class="card">
-                <div class="card-background">
-                    <img src="assets/images/chrome.png" alt="">
+                <div class="card-background" style="background-color: #F7B7AD;">
+                    <img src="assets/images/git.png" alt="">
                 </div>
                 <div class="card-text">
                     <div class="card-heading">
-                        <h3>Chromium</h3>
+                        <h3>Git</h3>
                     </div>
                     <div class="p">
-                        <p>Projeto de navegador de código aberto que serve de base para o Google Chrome e outros navegadores modernos.</p>
+                        <p>Sistema de controle de versões distribuído, eficiente para rastrear mudanças em projetos de software.</p>
                     </div>
                 </div>
                 <div class="card-label">
                     <div class="labels">
                         <div class="label">
-                            <p>Java</p>
+                            <p>C</p>
                         </div>
                         <div class="label">
-                            <p>Web</p>
+                            <p>Shell Script</p>
                         </div>
                         <div class="label">
-                            <p>Java</p>
+                            <p>Perl</p>
                         </div>
                     </div>
                     <div>
@@ -143,15 +143,15 @@
             </div>
 
             <div class="card">
-                <div class="card-background">
-                    <img src="assets/images/chrome.png" alt="">
+                <div class="card-background" style="background-color: #B6F5D5;">
+                    <img src="assets/images/android.png" alt="">
                 </div>
                 <div class="card-text">
                     <div class="card-heading">
-                        <h3>Chromium</h3>
+                        <h3>Android</h3>
                     </div>
                     <div class="p">
-                        <p>Projeto de navegador de código aberto que serve de base para o Google Chrome e outros navegadores modernos.</p>
+                        <p>Sistema operacional móvel desenvolvido pelo Google, usado em bilhões de dispositivos ao redor do mundo.</p>
                     </div>
                 </div>
                 <div class="card-label">
@@ -160,10 +160,10 @@
                             <p>Java</p>
                         </div>
                         <div class="label">
-                            <p>Web</p>
+                            <p>Kotlin</p>
                         </div>
                         <div class="label">
-                            <p>Java</p>
+                            <p>C++</p>
                         </div>
                     </div>
                     <div>
@@ -173,27 +173,27 @@
             </div>
 
             <div class="card">
-                <div class="card-background">
-                    <img src="assets/images/chrome.png" alt="">
+                <div class="card-background" style="background-color: #B9DBFD;">
+                    <img src="assets/images/typescript.png" alt="">
                 </div>
                 <div class="card-text">
                     <div class="card-heading">
-                        <h3>Chromium</h3>
+                        <h3>Typescript</h3>
                     </div>
                     <div class="p">
-                        <p>Projeto de navegador de código aberto que serve de base para o Google Chrome e outros navegadores modernos.</p>
+                        <p>Superset do JavaScript que adiciona tipagem estática e recursos modernos para desenvolvimento robusto.</p>
                     </div>
                 </div>
                 <div class="card-label">
                     <div class="labels">
                         <div class="label">
-                            <p>Java</p>
+                            <p>JavaScript</p>
                         </div>
                         <div class="label">
-                            <p>Web</p>
+                            <p>Typescript</p>
                         </div>
                         <div class="label">
-                            <p>Java</p>
+                            <p>Node</p>
                         </div>
                     </div>
                     <div>
@@ -203,27 +203,27 @@
             </div>
 
             <div class="card">
-                <div class="card-background">
-                    <img src="assets/images/chrome.png" alt="">
+                <div class="card-background" style="background-color: #FAE5B1;">
+                    <img src="assets/images/tensorflow.png" alt="">
                 </div>
                 <div class="card-text">
                     <div class="card-heading">
-                        <h3>Chromium</h3>
+                        <h3>Tensorflow</h3>
                     </div>
                     <div class="p">
-                        <p>Projeto de navegador de código aberto que serve de base para o Google Chrome e outros navegadores modernos.</p>
+                        <p>Biblioteca de código aberto do Google para computação numérica e aprendizado de máquina com redes neurais.</p>
                     </div>
                 </div>
                 <div class="card-label">
                     <div class="labels">
                         <div class="label">
-                            <p>Java</p>
+                            <p>Python</p>
                         </div>
                         <div class="label">
-                            <p>Web</p>
+                            <p>Cuda</p>
                         </div>
                         <div class="label">
-                            <p>Java</p>
+                            <p>C++</p>
                         </div>
                     </div>
                     <div>
@@ -233,27 +233,27 @@
             </div>
 
             <div class="card">
-                <div class="card-background">
-                    <img src="assets/images/chrome.png" alt="">
+                <div class="card-background" style="background-color: #ADF5BF;">
+                    <img src="assets/images/docusaurus.png" alt="">
                 </div>
                 <div class="card-text">
                     <div class="card-heading">
-                        <h3>Chromium</h3>
+                        <h3>Docusaurus</h3>
                     </div>
                     <div class="p">
-                        <p>Projeto de navegador de código aberto que serve de base para o Google Chrome e outros navegadores modernos.</p>
+                        <p>Gerador de sites estáticos focado em documentação técnica, criado pelo Facebook.</p>
                     </div>
                 </div>
                 <div class="card-label">
                     <div class="labels">
                         <div class="label">
-                            <p>Java</p>
+                            <p>JavaScript</p>
                         </div>
                         <div class="label">
-                            <p>Web</p>
+                            <p>React</p>
                         </div>
                         <div class="label">
-                            <p>Java</p>
+                            <p>Markdon</p>
                         </div>
                     </div>
                     <div>
